--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
     }
 
     handleSubmit(event) {
-      $.post( $ROOT + "/honey", (res) => {
+      $.post( $ROOT + "/honey", { 'search' : this.state.value }, (res) => {
         console.log('hello world', res)
         this.setState({list: res.data})
       });
@@ -48,7 +48,7 @@
           <div className="row">
             <div className="col-md-6 col-md-offset-3">
               <h2 className="text-center">Apis </h2>
-              <div id="form" className="col-md-4">
+              <div id="form">
                 <form onSubmit={this.handleSubmit}>
                   <div className="input-group">
                     <input type="text" name="search" className="form-control input-lg" placeholder="URL"
@@ -62,11 +62,12 @@
               </div>
             </div>
           </div>
-          <ul>
+          <div>
             {this.state.list.map(function(listValue){
-              return <li key={listValue}>{listValue}</li>;
+              var link = 'http://' + listValue
+              return <h3><a key={listValue} href={link} className="list-group-item">{listValue}</a></h3>;
             })}
-          </ul>
+          </div>
         </div>
       );
     }
